feat: enhance Trajectory class with sample list and conversion methods for different drive types
Signed-off-by: Zach Harel <zach@zharel.me>